# llfcchat

./: .gitignore
client/llfcchat/: httpmgr.cpp  logindialog.ui  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui
server/GateServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CMakePresets.json  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  RedisMgr.cpp  RedisMgr.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  const.h  vcpkg.json
server/VerifyServer/: config.json  package-lock.json  package.json  redis.js  server.js
